# common-cpp

./: .gitignore  CMakeLists.txt  common.cpp  http.cpp  install-android.sh  install-linux.sh  linux_monitor.cpp  monitor.cpp
cmake/: COMMONConfig.cmake  Findopenssl.cmake  commonConfig.cmake
include/: common.h  http.h  monitor.h
test/: CMakeLists.txt  common_test.cpp
